[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/actors/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/elf.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/places/temple.gd" type="Script" id=3]
[ext_resource path="res://scenes/props/present.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/props/small_present.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/aseprite_files/places/temple.aseprite" type="SpriteFrames" id=6]
[ext_resource path="res://assets/aseprite_files/places/santa_sleigh.aseprite" type="SpriteFrames" id=7]

[node name="temple" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Node2D" parent="."]

[node name="bg" type="AnimatedSprite" parent="background"]
position = Vector2( 64, 64 )
frames = ExtResource( 6 )
animation = "clouds"
frame = 2
playing = true

[node name="santa_sleigh" type="AnimatedSprite" parent="background"]
visible = false
frames = ExtResource( 7 )
centered = false

[node name="border" type="StaticBody2D" parent="background"]

[node name="outer" type="CollisionPolygon2D" parent="background/border"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 128, 85, 0, 85, 0, 128, 128, 128 )

[node name="objects" type="Node2D" parent="."]

[node name="presents" type="Node2D" parent="objects"]

[node name="small_present" parent="objects/presents" instance=ExtResource( 5 )]
position = Vector2( 116, 78 )
z_index = 78
frame = 1

[node name="small_present2" parent="objects/presents" instance=ExtResource( 5 )]
position = Vector2( 22, 91 )
z_index = 91
frame = 3
flipped = true

[node name="present" parent="objects/presents" instance=ExtResource( 4 )]
position = Vector2( 12, 111 )
z_index = 111
flipped = true

[node name="present2" parent="objects/presents" instance=ExtResource( 4 )]
position = Vector2( 76, 108 )
z_index = 108
frame = 4

[node name="present3" parent="objects/presents" instance=ExtResource( 4 )]
position = Vector2( 35, 126 )
z_index = 126
frame = 3
flipped = true

[node name="present4" parent="objects/presents" instance=ExtResource( 4 )]
position = Vector2( 51, 78 )
z_index = 78
frame = 5
flipped = true

[node name="player" parent="objects" instance=ExtResource( 1 )]
position = Vector2( 56, 119 )

[node name="elf" parent="objects" instance=ExtResource( 2 )]
position = Vector2( 111, 144 )

[node name="foreground" type="Node2D" parent="."]

[connection signal="animation_finished" from="background/bg" to="." method="_on_bg_animation_finished"]
[connection signal="animation_finished" from="background/santa_sleigh" to="." method="loop_santa_sleigh"]
